--- a/kdrive/Makefile.am
+++ b/kdrive/Makefile.am
@@ -10,10 +10,15 @@ if KDRIVELINUX
 LINUX_SUBDIRS = linux
 endif
 
+if KDRIVEMINIMAL
+MINIMAL_SUBDIRS = minimal
+endif
+
 SUBDIRS =			\
 	src			\
 	$(LINUX_SUBDIRS)	\
+	$(MINIMAL_SUBDIRS)	\
 	$(FBDEV_SUBDIRS)	\
 	$(VESA_SUBDIRS)
 
-DIST_SUBDIRS = vesa fbdev src linux
+DIST_SUBDIRS = vesa fbdev src linux minimal
